--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "autoprefixer": "^10.4.2",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
+        "dotenv": "^16.5.0",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
